spring-payment/spring-payments-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-payments-app-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: spring-payments-app
